2002-05-16  Richard Dale <duke@tipitina.demon.co.uk>

	* Fixed KDevelop compilation error by adding missing 
         PartController::setServiceType() method.

2002-05-15  Bernd Gehrmann  <bernd@mail.berlios.de>
	* Big cleanup in class store, see my mail in kdevelop-devel
	* Fixed persistant class store to not store
	  namespaced classes twice
	* Fixed ClassStore::removeWithReferences() to delete
	  classes from all namespaces, not only the global one
	* Class combo boxes can show global functions now
	* Class combo boxes handle namespaced classes now
2002-05-13  Richard Dale <duke@tipitina.demon.co.uk>
	* Added .mm and .M source file extensions for Objective-C++
2002-05-10  Bernd Gehrmann  <bernd@mail.berlios.de>
	* Put grep into editor context menu
	* Put 'Lookup in Index' and 'Goto manpage'
	  into editor context menu
	* Put 'Lookup in Index' and 'Search in docs'
	  into documentation context menu
	* Implemented 'Run to cursor' in debugger part
	  and put 'Watch: foo' into editor context menu
	* Removed lots of code duplication in tools config
	* Tools can be added by DnD from kicker menu
	* Some preparations for loading files with a
	  prescribed encoding
2002-05-06  Bernd Gehrmann  <bernd@mail.berlios.de>
	* Fixed history part crashing
	* StatusBar cleanup
	* Fixed ever-growing popup menu in editor
	* Tool menu and the file and directory context
	  menus can now be populated with any shell
	  command. Output can be sent to the app output
	  art. %S, %D, %T and %W magic works like
	  in old KDevelop (I hope :-)
2002-05-03  Bernd Gehrmann  <bernd@mail.berlios.de>
	* Structure view for HTML, Docbook and LaTeX
	* Perl part can exec programs and code snippets now
	* Moved duplicated code for executing programs in
	  an external konsole into the app output part
2002-05-01  Bernd Gehrmann  <bernd@mail.berlios.de>
	* Limit size of class and method combo boxes
	* Offer to rerun configure only if configuration
	  has changed