@@ -2,6 +2,7 @@
 <kpartgui name="KDevCTags" version="1">
 <MenuBar>
   <Menu name="edit" >
+    <Action name="edit_expandtext"/>
     <Action name="edit_expandabbrev"/>
   </Menu>
 </MenuBar>
